# pypandoc-demo

pypandoc/: pyproject.toml
pypandoc/src/pypandoc_demo/: convert_html_rst.py  somefile.rst
pypandoc/tests/: test_pypandoc_demo.py
