[tool.poetry]
name = "pypandoc_demo"
version = "0.1.0"
description = ""
authors = ["syed8048 <syedhaseebahmed12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pypandoc = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
